# custom-todos

./: .env.dist  .gitignore  README.md  backup_db.bat  pyproject.toml  requirements-dev.txt  requirements-prod.txt  start_server.bat
apps/core/: urls.py  views.py
apps/core/management/commands/: create_backup.py
apps/projects/: admin.py  models.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/todos/: admin.py  models.py  urls.py  views.py
apps/todos/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/css/: tailwind.config.js
staticfiles/: staticfiles.json
staticfiles/css/: styles.0448d337db83.css  styles.d04171f77f31.css
templates/: base.html
templates/components/: navbar.html
templates/core/: index.html
templates/core/components/: project_form.html  todo_form.html
templates/projects/: all_projects.html  project.html
templates/todos/: all_todos.html  day_report.html
templates/todos/components/: todos.html
